--- a/money/pom.xml
+++ b/money/pom.xml
@@ -8,20 +8,19 @@
     <artifactId>money</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-    <name>Money</name>
-    <description>A library for handling monetary values</description>
+    <name>WebShop</name>
+    <description>Simple WebShop application</description>
 
     <properties>
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.30</slf4j.version>
-        <junit-jupiter.version>5.7.1</junit-jupiter.version>
+        <junit-jupiter.version>5.9.0</junit-jupiter.version>
         <hamcrest-version>1.3</hamcrest-version>
-        <mockito-junit-jupiter.version>3.12.4</mockito-junit-jupiter.version>
+        <mockito-junit-jupiter.version>4.8.0</mockito-junit-jupiter.version>
         <spring-shell-starter.version>2.1.3</spring-shell-starter.version>
         <common-lang3.version>3.8.1</common-lang3.version>
     </properties>
-
 
     <dependencyManagement>
         <dependencies>
@@ -29,7 +28,7 @@
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.7.5</version>
+                <version>2.7.4</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -57,12 +56,15 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.200</version>
+            <version>2.1.214</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.31</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -86,13 +88,6 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${common-lang3.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${slf4j.version}</version>
         </dependency>
 
         <dependency>
@@ -126,7 +121,6 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
-            <version>${hamcrest-version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
